--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
     "routes": [
+        { "handle": "filesystem" },
+        { "src": "/(.*)", "status": 404, "dest": "/index.html" },
         {
             "src": "/",
             "dest": "/"
