--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "navigo": "^8.11.1"
+    "jquery": "^3.6.0",
+    "jquery-validation": "^1.19.3",
+    "navigo": "^8.11.1",
+    "toastr": "^2.1.4"
   }
 }
